; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_settings.c_set_spec_date_format.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_settings.c_set_spec_date_format.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64, i64 }

@conf = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_spec_date_format() #0 {
  %1 = call i64 (...) @verify_formats()
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %28

4:                                                ; preds = %0
  %5 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 2), align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %4
  %8 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 2), align 8
  %9 = call i32 @free(i64 %8)
  br label %10

10:                                               ; preds = %7, %4
  %11 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 1), align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %10
  %14 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 1), align 8
  %15 = call i32 @free(i64 %14)
  br label %16

16:                                               ; preds = %13, %10
  %17 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 0), align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %16
  %20 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 0), align 8
  %21 = call i32 @free(i64 %20)
  br label %22

22:                                               ; preds = %19, %16
  %23 = call i64 (...) @set_date_num_format()
  %24 = icmp eq i64 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %22
  %26 = call i32 (...) @set_spec_date_time_num_format()
  %27 = call i32 (...) @set_spec_date_time_format()
  br label %28

28:                                               ; preds = %3, %25, %22
  ret void
}

declare dso_local i64 @verify_formats(...) #1

declare dso_local i32 @free(i64) #1

declare dso_local i64 @set_date_num_format(...) #1

declare dso_local i32 @set_spec_date_time_num_format(...) #1

declare dso_local i32 @set_spec_date_time_format(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
